[package]
name = "rbln-metrics-exporter"
edition = "2021"
version = "0.1.2"
authors = ["Haejoon Kim <oceanjoon@rebellions.ai>"]
build = "src/build.rs"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive", "env"] }
env_logger = "0.11.5"
log = "0.4.22"
metrics = "0.24.0"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false, features = ["http-listener"] }
phf = { version = "0.11.3", features = ["macros"] }
prost = "0.13.5"
regex = "1.11.1"
strum_macros = "0.27.1"
tokio = { version = "1.41.1", features = ["full"] }
tonic = "0.13.0"

[[bin]]
path = "src/main.rs"
name = "rbln-metrics-exporter"
plugin = false
proc-macro = false
required-features = []

[build-dependencies]
tonic-build = "0.13.0"
